tests/valid/58235_power_precedence/power_precedence.agu
-- Author: 58235, António Almeida

let _ : Unit =
    let a = 4 ^ 2 ^ 2 * 2;
    let b = 2 * 4 ^ 2 ^ 2;

    print(a == b); print("\n");
    print(a);