tests/invalid-syntax/58235_invalid_function_annotation/invalid_function_annotation.agu
-- Author: 58235, António Almeida
-- Function badly annotated

let f(n) : Int : Unit = print(2 * n)